<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Chronometer
        android:id="@+id/chrono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="46sp"
        android:format="@string/stopwatch" />
    
   	<TextView
   	    android:id="@+id/textState"
   	    android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:text="@string/congestion_stop"
       	android:layout_marginTop="0dp"
       	android:textSize="24sp" />

    <Button
        android:id="@+id/buttonMoving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal|fill_horizontal"
        android:onClick="timerMoving"
        android:text="@string/moving" />

    <Button
        android:id="@+id/buttonBusStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal|fill_horizontal"
        android:onClick="timerBusStop"
        android:text="@string/bus_stop" />

    <Button
        android:id="@+id/buttonTrafficLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal|fill_horizontal"
        android:onClick="timerTrafficLight"
        android:text="@string/traffic_light" />
    
    <Button
        android:id="@+id/buttonCongestionSlow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal|fill_horizontal"
        android:onClick="timerCongestionSlow"
        android:text="@string/congestion_slow" />

    <Button
        android:id="@+id/buttonCongestionStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal|fill_horizontal"
        android:onClick="timerCongestionStop"
        android:text="@string/congestion_stop" />
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="fill_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical|fill"
            android:onClick="timerStart"
            android:text="@string/start" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical|fill"
            android:onClick="timerStop"
            android:text="@string/stop" />

    </LinearLayout>
</LinearLayout>